--- a/Round4/file32.Rmd
+++ b/Round4/file32.Rmd
@@ -7,20 +7,19 @@ editor_options:
   chunk_output_type: inline
 ---
 
+```{r}
+n.permutations <- 3e2
+n.replications <-  1e2
+```
 
 
 ```{r preliminaries}
 file.name <- "file32"
-setwd('~/workspace/permuting_accuracy/Round3/')
+setwd('~/workspace/permuting_accuracy/Round4/')
 
-balance <- TRUE   # set for TRUE for balanced folding and refolding.
-n.replications <-  1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
-n.permutations <- 3e2
 n.folds <- 4
-cost.1 <- 1e1
-cost.2 <- 1e-1
 
 source('Gilron Effect of Cross Validatino.R')
 
@@ -29,13 +28,12 @@ effects <- seq(0, 0.5, length=3)
 
 ## Make correlation matrix
 Sigma <- ar1_cov(n = p, rho=0.6)
-lattice::levelplot(Sigma)
+# lattice::levelplot(Sigma)
+Sigma.sqrt <- t(chol(Sigma))
 Sigma.eigen <- eigen(Sigma)
-plot(Sigma.eigen$values, type='h')
+# plot(Sigma.eigen$values, type='h')
 direction0 <- Sigma.eigen$vectors[,7] 
 direction <- direction0 * sqrt(p)
-# mahalanobis(x = direction, center = 0, cov = Sigma)
-# mahalanobis(x = direction, center = 0, cov = diag(p))
 ```
 
 
@@ -53,12 +51,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
-    .noise <- rmvnorm(n=n, sigma = Sigma)
-    # matplot(t(.noise), type='l')
-
-    ## Shift alternative:
-    noise <- .noise
     shift <- matrix(effect * direction, nrow=20, ncol=23, byrow = TRUE)
+    noise <-t(Sigma.sqrt%*%matrix(rnorm(n*p), ncol = n, nrow=p))
     noise[labels,] <- noise[labels,] + shift
     
     ## Compute observed statistic
@@ -66,7 +60,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     x2 <- noise[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
-    fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    fold.ids <- balanced_folding(labels, n.folds, balance = TRUE)
     
     # Observables 
     ts <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
