--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -464,12 +464,6 @@ This matter is further discussed in Section~\ref{sec:regularizaton}.
 		\caption{Signal in direction of lowest variance PC of $\Sigma$.} 
 		\label{fig:dependence_12}
 	\end{subfigure}
-	%	\begin{subfigure}[t]{.3\columnwidth}
-	%		\centering
-	%		  \includegraphics[width=1\columnwidth]{"art/file11"}
-	%		\caption{Signal in direction of identity vector.} 
-	%		\label{fig:dependence_13}
-	%	\end{subfigure}
 	\caption{Short memory, AR(1) correlation. 
 		$\Sigma_{k,l}=\rho^{|k-l|}; \rho=0.6$.}
 	\label{fig:dependence_1}
@@ -496,23 +490,23 @@ The figure demonstrates that two-group tests still dominate in power, even when 
 \begin{figure}[th]
 	\centering
 	\begin{subfigure}[t]{.45\columnwidth}
-	\centering
-	\includegraphics[width=1\columnwidth]{"art/file42"}
-	\caption{Data analyzed in the original space ($x$).}
-	\label{fig:interactions-in-original-space}
+		\centering
+		\includegraphics[width=1\columnwidth]{"art/file41"}
+		\caption{Data analyzed in the original space ($x$).}
+		\label{fig:interactions-in-original-space}
 	\end{subfigure}
 	\begin{subfigure}[t]{.45\columnwidth}
-	\centering
-%	TODO: \includegraphics[width=1\columnwidth]{"art/file42"}
-	\caption{Data analyzed in augmented interactions space ($\tilde x$).}
-	\label{fig:interactions-in-augmented-space}
+		\centering
+		%	TODO: \includegraphics[width=1\columnwidth]{"art/file45"}
+		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
+		\label{fig:interactions-in-augmented-space}
 	\end{subfigure}
 	\caption{\textbf{Logistic regression with second order interactions.} 
-	Data generated via $y|x \sim Binom(1,p(x));
-	p(x)=\exp(\eta)/[1+\exp(\eta)];
-	\eta=x'\beta+x'Bx; 
-	X\sim \mathcal{N}(0,I_{p\times p})$. } 
-	\label{fig:interactions}
+		Data generated via $y|x \sim Binom(1,p(x));
+		p(x)=\exp(\eta)/[1+\exp(\eta)];
+		\eta=x'\beta+x'Bx; 
+		x\sim \mathcal{N}(0,I_{p\times p})$. } 
+	\label{fig:logistic-main-and-interactions}
 \end{figure}
 
 
