--- a/Round4/file12.Rmd
+++ b/Round4/file12.Rmd
@@ -7,22 +7,23 @@ editor_options:
   chunk_output_type: console
 ---
 
+```{r}
+n.permutations <- 3e2
+n.replications <-  1e2
+```
+
 
 ```{r preliminaries}
 file.name <- "file12"
+setwd('~/workspace/permuting_accuracy/Round4/')
 
-balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
-n.permutations <- 3e2
 n.folds <- 4
-cost.1 <- 1e1
-cost.2 <- 1e-1
 
 source('Gilron Effect of Cross Validatino.R')
 
-effects <- seq(0, 0.5, length=3) # change in location
+effects <- seq(0, 20, length=3) # change in location
 
 Sigma <- diag(p)
 # lattice::levelplot(Sigma)
@@ -43,10 +44,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
-    .noise <- rmvnorm(n=n, sigma = Sigma)
-    
-    # Golland's mixture null:
-    .noise <- rmvnorm(n=n, sigma = Sigma) # Gaussian noise
+    .noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
     shift <- rep(sqrt(9/p), p)
     shift.group <- 2*rbinom(n, 1, (0.5-effect)^labels*(0.5+effect)^(1-labels))-1
     noise <- .noise + t(outer(shift, shift.group))
@@ -57,11 +55,16 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     x2 <- noise[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
-    fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    fold.ids <- balanced_folding(labels, n.folds, TRUE)
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+    ts <-statistics(x1 = x1, 
+                    x2 = x2, 
+                    Sigma.inv = Sigma.inv, 
+                    noise = noise, 
+                    labels = labels, 
+                    fold.ids = fold.ids)
     
     # Prepare to permute
     old.labels <- labels
@@ -78,7 +81,12 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      permuted[i,] <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+      permuted[i,] <- statistics(x1 = x1, 
+                                 x2 = x2,
+                                 Sigma.inv =Sigma.inv, 
+                                 noise = noise,
+                                 labels = labels,
+                                 fold.ids = fold.ids)
     } # End permutation
     
     # Compute p-vals for each statistic
@@ -88,7 +96,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     }
     names(pvals) <- names(ts)
 
-    c(effect=effect, pvals) 
+    c(effect=effect, pvals, replication=j) 
   }
 } 
   
