--- a/Round4/file14.Rmd
+++ b/Round4/file14.Rmd
@@ -8,30 +8,32 @@ editor_options:
 ---
 
 
+```{r}
+n.permutations <- 3e2
+n.replications <-  1e2
+```
+
+
 ```{r preliminaries}
 file.name <- "file14"
-setwd('~/workspace/permuting_accuracy/Round3/')
+setwd('~/workspace/permuting_accuracy/Round4/')
 
 balance <- TRUE   # Set for TRUE for balanced folding ana refolding.
-n.replications <-  1e2#1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
-n.permutations <- 3e2
 n.folds <- 4
-cost.1 <- 1e1
-cost.2 <- 1e-1
 
 ## Signal in location
-effects <- seq(0, 0.5, length=3) # change in location
+effects <- seq(0, 20, length=3) # change in location
 
 source('Gilron Effect of Cross Validatino.R')
 
-## Signal in scale
 Sigma <- diag(p)
+Sigma.inv <- solve(Sigma)
 # lattice::levelplot(Sigma)
 direction0 <- rep(1,p)
 maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
-direction <- 23 * direction0 / sqrt(n/2*maha)
+direction <-  direction0 / sqrt(n/2*maha)
 ```
 
 
@@ -49,12 +51,10 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
-    .noise <- rmvnorm(n=n, sigma = Sigma)
+    noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
     
     # Shift alternative:
     # effect <- effects[[2]]
-    
-    noise <- .noise
     shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
     noise[labels,] <- noise[labels,] + shift
     
@@ -63,10 +63,10 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     x2 <- noise[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
-    fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    fold.ids <- balanced_folding(labels, n.folds, balance = TRUE)
     
     # Observables 
-    ts <-statisticsHighDim(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2) 
+    ts <-statisticsHighDim(x1,x2,Sigma.inv,noise,labels,fold.ids) 
     
     # Prepare to permute
     old.labels <- labels
@@ -79,11 +79,11 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       # i <- 1
       
       labels <- sample(labels) # make permutation
-      fold.ids <- balanced_folding(labels, n.folds, balance) # refold
+      fold.ids <- balanced_folding(labels, n.folds, TRUE) # refold
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      permuted[i,] <- statisticsHighDim(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2) 
+      permuted[i,] <- <-statisticsHighDim(x1,x2,Sigma.inv,noise,labels,fold.ids) 
         
     } # End permutation
     
@@ -94,7 +94,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     }
     names(pvals) <- names(ts)
 
-    c(effect=effect, pvals) 
+    c(effect=effect, pvals, replication=j) 
   }
 } 
   
