--- a/Round4/file2.Rmd
+++ b/Round4/file2.Rmd
@@ -9,8 +9,8 @@ editor_options:
 
 
 ```{r}
-n.permutations <- 4e2
-n.replications <-  2e2
+n.permutations <- 3e2
+n.replications <-  1e2
 ```
 
 
@@ -25,14 +25,14 @@ n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
 
-effects <- seq(0, 0.5, length=3) # change in location
+effects <- seq(0, 20, length=3) # change in location
 
 Sigma <- diag(p)
 Sigma.inv <- solve(Sigma)
 # lattice::levelplot(Sigma)
 direction0 <- rep(1,p)
 maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
-direction <- p * direction0 / sqrt(n/2*maha)
+direction <-  direction0 / sqrt(n/2*maha)
 ```
 
 
@@ -40,8 +40,6 @@ direction <- p * direction0 / sqrt(n/2*maha)
 ```{r}
 RhpcBLASctl::blas_set_num_threads(1)
 registerDoMC(cores=100)
-# library(doRNG)
-# registerDoRNG()
 ```
 
 ```{r independent noise variable folds}
@@ -51,12 +49,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
-    noise <- matrix(dqrnorm(n*p), ncol=p, nrow=n)
-    
-    ## Shift alternative:
-    # effect <- effects[[1]]
-    
     shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
+    noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
     noise[labels,] <- noise[labels,] + shift
     
     ## Compute observed statistic
@@ -64,7 +58,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     x2 <- noise[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
-    fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    fold.ids <- balanced_folding(labels, n.folds, TRUE)
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
@@ -84,9 +78,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     for(i in 1:n.permutations){
       # i <- 1
-      
       labels <- sample(labels) # label switching
-      fold.ids <- balanced_folding(labels, n.folds, balance) # refold
+      fold.ids <- balanced_folding(labels, n.folds, TRUE) # refold
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
