--- a/Round4/file31.Rmd
+++ b/Round4/file31.Rmd
@@ -5,18 +5,19 @@ date: "8/2/2017"
 output: html_document
 ---
 
+```{r}
+n.permutations <- 3e2
+n.replications <-  1e2
+```
+
+
 ```{r preliminaries}
 file.name <- "file31"
-setwd('~/workspace/permuting_accuracy/Round3/')
+setwd('~/workspace/permuting_accuracy/Round4/')
 
-balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
-n.permutations <- 3e2
 n.folds <- 4
-cost.1 <- 1e1
-cost.2 <- 1e-1
 
 source('Gilron Effect of Cross Validatino.R')
 
@@ -25,7 +26,9 @@ effects <- seq(0, 0.5, length=3)
 
 ## Dependence
 Sigma <- ar1_cov(n = p, rho=0.6)
+Sigma.sqrt <- t(chol(Sigma))
 # lattice::levelplot(Sigma)
+Sigma.inv <- solve(Sigma) %>% round(1)
 Sigma.eigen <- eigen(Sigma)
 # plot(Sigma.eigen$values, type='h')
 direction0 <- Sigma.eigen$vectors[,15] 
@@ -47,11 +50,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
-    .noise <- rmvnorm(n=n, sigma = Sigma)
-
-    ## Shift alternative:
-    noise <- .noise
     shift <- matrix(effect * direction, nrow=20, ncol=23, byrow = TRUE)
+    noise <-t(Sigma.sqrt%*%matrix(rnorm(n*p), ncol = n, nrow=p))
     noise[labels,] <- noise[labels,] + shift
 
     ## Compute observed statistic
@@ -59,7 +59,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     x2 <- noise[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
-    fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    fold.ids <- balanced_folding(labels, n.folds, balance = TRUE)
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
