--- a/Round4/file9.Rmd
+++ b/Round4/file9.Rmd
@@ -9,37 +9,40 @@ editor_options:
 
 
 
+```{r}
+n.permutations <- 3e2
+n.replications <-  1e2
+```
+
+
 ```{r preliminaries}
 file.name <- "file9"
 setwd('~/workspace/permuting_accuracy/Round3/')
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e3
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
-n.permutations <- 3e2
 n.folds <- 4
-cost.1 <- 1e1
-cost.2 <- 1e-1
 
 source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in location
-effects <- seq(0, 0.5, length=3) # change in location
+effects <- seq(0, 20, length=3) # change in location
 
 
 Sigma <- diag(p)
+Sigma.inv <- solve(Sigma)
 # lattice::levelplot(Sigma)
 direction0 <- rep(1,p)
 maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
-direction <- 23 * direction0 / sqrt(n/2*maha)
+direction <- direction0 / sqrt(n/2*maha)
 ```
 
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
 RhpcBLASctl::blas_set_num_threads(1)
-registerDoMC(cores=60)
+registerDoMC(cores=100)
 ```
 
 
@@ -66,7 +69,13 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <-statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+        ts <-statistics(x1 = x1, 
+                    x2 = x2, 
+                    Sigma.inv = Sigma.inv, 
+                    noise = noise, 
+                    labels = labels, 
+                    fold.ids = fold.ids)
+
     
     # Prepare to permute
     old.labels <- labels
@@ -80,10 +89,16 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       
       labels <- sample(labels) # make permutation
       fold.ids <- balanced_folding(labels, n.folds, balance) # refold
+
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      permuted[i,] <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+      permuted[i,] <- statistics(x1 = x1, 
+                                 x2 = x2,
+                                 Sigma.inv =Sigma.inv, 
+                                 noise = noise,
+                                 labels = labels,
+                                 fold.ids = fold.ids)
     } # End permutation
     
     ## Compute p-vals for each statistic
