--- a/Round4/file2.Rmd
+++ b/Round4/file2.Rmd
@@ -25,14 +25,14 @@ n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
 
-effects <- seq(0, 0.5, length=3) # change in location
+effects <- seq(0, 20, length=3) # change in location
 
 Sigma <- diag(p)
 Sigma.inv <- solve(Sigma)
 # lattice::levelplot(Sigma)
 direction0 <- rep(1,p)
 maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
-direction <- p * direction0 / sqrt(n/2*maha)
+direction <-  direction0 / sqrt(n/2*maha)
 ```
 
 
@@ -51,7 +51,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
-    noise <- matrix(dqrnorm(n*p), ncol=p, nrow=n)
+    noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
     
     ## Shift alternative:
     # effect <- effects[[1]]
