--- a/Round4/file45.Rmd
+++ b/Round4/file45.Rmd
@@ -24,16 +24,21 @@ n.folds <- 4
 source('Gilron Effect of Cross Validatino.R')
 
 Sigma <- diag(p)
-# Sigma.inv <- solve(Sigma)
-beta0 <- rnorm(p)
-effects <- c(0,1,2)
+Sigma.inv <- solve(Sigma)
+p.quadratic <- choose(p,2)
+p.total <- p+p.quadratic
+beta0 <- c(rep(1,p+p.quadratic))
+effects <- c(0,.5,2)
 ```
 
 ```{r}
-noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
-noise.augment <- model.matrix(~.^2, as.data.frame(noise))
-vars <- colnames(noise.augment)
-
+noise <- matrix(rnorm(n*4e3*p), ncol=p, nrow=n*4e3)
+noise.augment <- model.matrix(~.^2-1, as.data.frame(noise))
+Sigma.augment <- cov(noise.augment) %>% round(0) %>% as("dsCMatrix")
+sum(Sigma.augment)
+Sigma.aug.inv <- solve(Sigma.augment)
+# dim(Sigma.aug.inv)
+rm(noise, noise.augment)
 ```
 
 
@@ -50,7 +55,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
-    noise.augment <- model.matrix(~.^2, as.data.frame(noise))
+    noise.augment <- model.matrix(~.^2-1, as.data.frame(noise))
 
 
     ## Logistic regression
