--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -52,7 +52,7 @@ In particular with respect to the dominance of two-group tests.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.45\columnwidth]{"art/file1"}
-	\caption{[TODO:update]\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.}
+	\caption{\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.}
 	\label{fig:large-sample}
 \end{figure}
 
