--- a/Round4/file42.Rmd
+++ b/Round4/file42.Rmd
@@ -27,8 +27,8 @@ Sigma <- diag(p)
 Sigma.inv <- solve(Sigma)
 
 p.quadratic <- choose(p,2)
-p.total <- p+1+p.quadratic
-beta0 <- c(rep(0,p+1),rep(1,p.quadratic))
+p.total <- p+p.quadratic
+beta0 <- c(rep(0,p),rep(1,p.quadratic))
 effects <- c(0,0.25,0.5)
 ```
 
@@ -45,7 +45,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
-    noise.augment <- model.matrix(~.^2, as.data.frame(noise))
+    noise.augment <- model.matrix(~.^2-1, as.data.frame(noise))
     
     ## Logistic regression
     # effect <- effects[[1]]
