--- a/Round4/file43.Rmd
+++ b/Round4/file43.Rmd
@@ -27,8 +27,8 @@ Sigma0 <- diag(p)
 Sigma.inv <- solve(Sigma)
 
 p.quadratic <- choose(p,2)
-p.total <- p+1+p.quadratic
-beta0 <- c(rep(0,p+1),rep(1,p.quadratic))
+p.total <- p+p.quadratic
+beta0 <- c(rep(0,p),rep(1,p.quadratic))
 effects <- c(0,0.25,0.5)
 ```
 
@@ -55,7 +55,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
-    noise.augment <- model.matrix(~.^2, as.data.frame(noise))
+    noise.augment <- model.matrix(~.^2-1, as.data.frame(noise))
     
     ## Logistic regression
     # effect <- effects[[1]]
@@ -77,7 +77,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <- statistics(x1 = x1, 
+    ts <- statisticsAugmented(x1 = x1, 
                     x2 = x2, 
                     Sigma.inv = Sigma.aug.inv, 
                     noise = noise.augment, 
@@ -100,7 +100,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise.augment[labels,]
       x2 <- noise.augment[!labels,]
       
-      permuted[i,] <- statistics(x1 = x1, 
+      permuted[i,] <- statisticsAugmented(x1 = x1, 
                                  x2 = x2, 
                                  Sigma.inv = Sigma.aug.inv, 
                                  noise = noise.augment, 
