--- a/Round4/file43.Rmd
+++ b/Round4/file43.Rmd
@@ -100,12 +100,12 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise.augment[labels,]
       x2 <- noise.augment[!labels,]
       
-      permuted[i,] <- statisticsAugmented(x1 = x1, 
+      try(permuted[i,] <- statisticsAugmented(x1 = x1, 
                                  x2 = x2, 
                                  Sigma.inv = Sigma.aug.inv, 
                                  noise = noise.augment, 
                                  labels = labels, 
-                                 fold.ids = fold.ids)
+                                 fold.ids = fold.ids), silent=TRUE)
     } # End permutation
     
     # Compute p-vals for each statistic
