--- a/Round4/file43.Rmd
+++ b/Round4/file43.Rmd
@@ -26,10 +26,12 @@ source('Gilron Effect of Cross Validatino.R')
 Sigma0 <- diag(p)
 Sigma.inv <- solve(Sigma)
 
+Sigma <- diag(p)
+Sigma.inv <- solve(Sigma)
 p.quadratic <- choose(p,2)
 p.total <- p+p.quadratic
-beta0 <- c(rep(0,p),rep(1,p.quadratic))
-effects <- c(0,0.25,0.5)
+beta0 <- c(rep(0,p),rep(0.01,p.quadratic))
+effects <- c(0,0.5,2)
 ```
 
 ```{r}
@@ -58,12 +60,10 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     noise.augment <- model.matrix(~.^2-1, as.data.frame(noise))
     
     ## Logistic regression
-    # effect <- effects[[1]]
-    # effect <- 3
+    # effect <- effects[[3]]
     beta <- beta0*effect
     link <- noise.augment%*%beta
     probs <- plogis(link)
-    # plot(probs, type='h')
     
     # Force balanced groups:
     labels <- c(TRUE,FALSE)[rbinom(n,1, probs)+1] # group assignemt labels
@@ -100,12 +100,12 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise.augment[labels,]
       x2 <- noise.augment[!labels,]
       
-      try(permuted[i,] <- statisticsAugmented(x1 = x1, 
+      permuted[i,] <- statisticsAugmented(x1 = x1, 
                                  x2 = x2, 
                                  Sigma.inv = Sigma.aug.inv, 
                                  noise = noise.augment, 
                                  labels = labels, 
-                                 fold.ids = fold.ids), silent=TRUE)
+                                 fold.ids = fold.ids)
     } # End permutation
     
     # Compute p-vals for each statistic
