--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -64,7 +64,7 @@ In particular with respect to the dominance of two-group tests.
 \section{Departure From Sphericity}
 In the main text we have departed from the sphericity assumption by allowing $\Sigma$ to be an $AR(1)$ covariance. 
 We now try other covariance structures: a long-memory Brownian motion correlation, and an arbitrary (random) covariance structure. 
-As seen in Figures \ref{fig:dependence_2} and \ref{fig:dependence_3}, our findings hold for these correlation structures. 
+As seen in Figures \ref{fig:dependence_2} and \ref{fig:dependence_3}, the findings in the main test hold also for the ``long-memory'', and ``arbitrary'' correlation structures.
 In particular: two-group tests dominate accuracy tests, and signal is masked in the low PCs of the noise. 
 
 
@@ -122,8 +122,8 @@ In particular: two-group tests dominate accuracy tests, and signal is masked in 
 
 \section{Departure From Shift Alternatives}
 
-In the main text we have argued that shift alternatives are the most common in the univariate statistical literature. 
-They are also very common in the multivariate literature, as they are implied by Fisher's LDA model, and in multivariate analysis of variance (MANOVA).
+Shift alternatives are the most common signal model in the univariate statistical literature. 
+They are also very common in the multivariate literature, as they are implied by Fisher's LDA problem setup, and in multivariate analysis of variance (MANOVA).
 On the other hand, effects may manifest themselves in many ways. 
 We thus verify our statements in models which are not ``pure shifts''. 
 These include logistic regression, and a mixture class. 
@@ -139,8 +139,29 @@ $P(y=1|x)=\exp(\eta)/[1+\exp(\eta)]$.
 Main-effects and second order interaction imply that 
 $\eta=x'\beta+x'Bx$, for some $p$-vector $\beta$, and symmetric $p \times p$ matrix $B$.
 We also assume $x\sim \mathcal{N}(0,I_{p\times p})$.
-We perform the various tests in the original space, $x$, but also in the augmented space of second order interactions: 
+We perform the various tests in the original space, $x$, but also in the $276$ dimensional pace of main effects and second order interactions: 
 $$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots,x_p x_p).$$
+
+From Figure~\ref{fig:logistic-main-and-interactions} we learn that two-group tests dominate accuracy tests also in the logistic setup.
+Was this to be expected, given our conclusions on multivariate shifts?
+In the logistic setup $x_1$ is not a shifted version of $x_0$, but their means certainly differ. 
+The larger the main effects, the larger the different in means.
+This suggests that a main-effect-only model ($B=0$) will be similar to a shift class, and a second-order-interactions-only model may be very different than a shift class.
+To isolate these two cases, we simulate a main-effects-only setup (Fig.~\ref{fig:logistic-main-only}), and an interaction-only setup (Fig.~\ref{fig:logistic-interactions-only}).
+
+The main-effect-only case in Figure~\ref{fig:logistic-main-only} is not very surprising: 
+the groups differ in their first moment, so that our conclusions are almost identical to the ``pure shift'' examples in the main text. 
+Analyzing the data in the augmented $276$ dimensional space decreases power, since the problems increases in dimension, and many more parameters need to be estimated. 
+
+The second-order-interactions-only case in Figure~\ref{fig:logistic-interactions-only} is interesting. 
+From Figure~\ref{fig:quadratic-form} we see that in this setup $x_1$ is roughly a scaled version of $x_0$.
+In the context of machine-learning, and in particular learning in kernel spaces, this is sometimes known as a \emph{ring problem}.
+Because $B$ is a scaled matrix of ones, and thus has the same symmetries as $x$, then $x_0$ and $x_1$ have the same first moment. 
+We thus expect that tests for shifts would have poor performance. 
+This is indeed the case: no test has any power. 
+Surprisingly, the two-group GOF tests have no power either.
+[TODO: file46 for large saple verification. can we offer some intuition?]
+
 
 
 \begin{figure}[th]
@@ -153,7 +174,7 @@ $$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots
 	\end{subfigure}
 	\begin{subfigure}[t]{.45\columnwidth}
 		\centering
-		%	TODO: \includegraphics[width=1\columnwidth]{"art/file45"}
+		\includegraphics[width=1\columnwidth]{"art/file45"}
 		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
 		\label{fig:interactions-in-augmented-space}
 	\end{subfigure}
@@ -169,16 +190,6 @@ $$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots
 
 
 
-The logistic assumption differs from our original setup in that it states $y|x$, instead of $x|y$. 
-In the terms of \cite{ng2002discriminative}, the logistic is a \emph{discriminative model} whereas Fisher's LDA is a \emph{generative model}.
-The logistic assumption implies that $x_0$ is no longer a shifted versions of $x_1$, even in the presence of main effects alone ($B=0$).
-While not a ``pure shift'', the logistic model with main effects has a strong shift component. 
-We thus expect it to behave like the basic setup. 
-This is verified in Figure \ref{fig:logistic-main-only}, where two-group tests dominate accuracy-tests in the original space, and in the augmented space. 
-
-
-
-
 \begin{figure}[th]
 	\centering
 	\begin{subfigure}[t]{.45\columnwidth}
@@ -189,7 +200,7 @@ This is verified in Figure \ref{fig:logistic-main-only}, where two-group tests d
 	\end{subfigure}
 	\begin{subfigure}[t]{.45\columnwidth}
 		\centering
-		%	TODO: \includegraphics[width=1\columnwidth]{"art/file44"}
+		\includegraphics[width=1\columnwidth]{"art/file44"}
 		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
 		\label{fig:main-only-augmented-space}
 	\end{subfigure}
@@ -203,20 +214,6 @@ This is verified in Figure \ref{fig:logistic-main-only}, where two-group tests d
 \end{figure}
 
 
-
-
-
-
-It is possible to use the logistic setup to generate data with no shift at all. 
-For instance, if effects have a quadratic form in link scale: $\eta=\beta_0+x'x$. 
-This is depicted for $p=2$ in Figure~\ref{fig:quadratic-form}.
-This example is typically encountered in the machine learning literature, to motivate learning with kernels. 
-
-We need to distinguish between analysis in the original $x$ space, and in the augmented interaction space. 
-In the original space, $x_1$ is more akin to a \emph{rescaling} of $x_0$ than a shift.
-In the augmented space $\tilde{x}$, $x_1$ is more akin to a \emph{shifting} of $x_0$. 
-We thus expect that all tests will perform poorly in the original space, and two-group tests to dominate in the augmented space. 
-This is confirmed in Figure~\ref{fig:logistic-interactions-only}.
 
 \begin{figure}[th]
 	\centering
@@ -235,7 +232,7 @@ This is confirmed in Figure~\ref{fig:logistic-interactions-only}.
 	\end{subfigure}
 	\begin{subfigure}[t]{.3\columnwidth}
 	\centering
-%	\includegraphics[width=1\columnwidth]{"art/file43"}
+	\includegraphics[width=1\columnwidth]{"art/file43"}
 	\caption{Detection power in \textbf{augmented} space.} 
 	\label{fig:logistic-interactions-only-augmented}
 	\end{subfigure}
