--- a/Round4/file44.Rmd
+++ b/Round4/file44.Rmd
@@ -31,7 +31,7 @@ effects <- c(0,0.5,2)
 
 ```{r}
 noise <- matrix(rnorm(n*4e3*p), ncol=p, nrow=n*4e3)
-noise.augment <- model.matrix(~.^2-1, as.data.frame(noise))
+noise.augment <- augmentDesign(noise)
 Sigma.augment <- cov(noise.augment) %>% round(0) %>% as("dsCMatrix")
 sum(Sigma.augment)
 Sigma.aug.inv <- solve(Sigma.augment)
@@ -53,7 +53,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
-    noise.augment <- model.matrix(~.^2-1, as.data.frame(noise))
+    noise.augment <- augmentDesign(noise)
 
     ## Logistic regression
     # effect <- effects[[3]]
