file43 output ready

--- a/Round4/TODO
+++ b/Round4/TODO
@@ -1,6 +1,3 @@
-- Simulate interaction:
-   - Decrease SNR when generating logistic regressions.
-   - z-score predictors. 
-
+- Center augmented space predictors.
 
     
