--- a/Round4/file40.Rmd
+++ b/Round4/file40.Rmd
@@ -23,11 +23,8 @@ n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
 
-Sigma <- diag(p)
-Sigma.inv <- solve(Sigma)
-b0 <- -1
-beta0 <- rep(1,p)
-effects <- c(0,0.5,2)
+makeLogisticSetup(p, beta00=1/p, B00=0)
+effects <- c(0,1,10)
 ```
 
 
@@ -41,29 +38,23 @@ registerDoMC(cores=100)
 pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   foreach(effect=effects, .combine=rbind)  %do% {
     
-    ## Gaussian noise
+    ## Logistic regression
     noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
 
-    ## Logistic regression
     # effect <- effects[[3]]
-    beta <- beta0*effect
-    B <- B0*effect
-    link <- b0 + noise%*%beta
-    probs <- plogis(link)
-    
-    # Force balanced groups:
-    labels <- c(TRUE,FALSE)[rbinom(n,1, probs)+1] # group assignemt labels
+    probs <- makeLogisticProbs(beta0, B0, effect, noise)
+
+    labels <- makeLogisticLabels(probs,n)
+    # table(labels)
     # plot(probs,type='h', col=labels+1)
-    
+
+
     ## Compute observed statistic
     x1 <- noise[labels,]
     x2 <- noise[!labels,]
-    
-    ## Asign observations to folds. Use the simple label structure to balance folds.
+   
     fold.ids <- balanced_folding(labels, n.folds, balance = TRUE)
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
-    
-    # Observables 
     ts <-statistics(x1 = x1, 
                     x2 = x2, 
                     Sigma.inv = Sigma.inv, 
@@ -71,11 +62,9 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
                     labels = labels, 
                     fold.ids = fold.ids)
     
-    # Prepare to permute
+    # Permute
     old.labels <- labels
     old.folds.ids <- fold.ids
-    
-    # Initialize permuted statistics
     permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
     for(i in 1:n.permutations){
@@ -110,7 +99,7 @@ pbPost(type = "note", body = "Done", title = the.message)
 save.image(file=paste(file.name,".RData", sep=''))
 ```
 
-
+## Analysis
 ```{r}
 # load('file40.RData')
 source('prepare_graphics.R')
@@ -122,32 +111,4 @@ pdf(file = paste('Output/',file.name,'.pdf', sep=''))
 plot(plot.3)
 dev.off()
 ```
-
-There is indeed a problem with p-values:
-
-```{r}
-pvals.melt[effect==0,.(Power=mean(value<0.05)),.(effect,statistic)]
-pvals.melt[effect==0,value,.(effect,statistic)] %>% 
-  ggplot(aes(value))+
-  stat_ecdf(geom = "step")+
-  facet_wrap(~statistic)
-```
-
-     effect     statistic Power
- 1:      0    Oracle.Cov 0.050
- 2:      0     Hotelling 0.051
- 3:      0       Schafer 0.049
- 4:      0        Goeman 0.050
- 5:      0    Srivastava 0.050
- 6:      0       Gretton 0.057
- 7:      0          dCOV 0.051
- 8:      0         Simes 0.058
- 9:      0           Cai 0.050
-10:      0      lda.CV.1 0.047
-11:      0    lda.noCV.1 0.023
-12:      0   svm.CV.c100 0.038
-13:      0   svm.CV.c001 0.053
-14:      0    svm.CV.cCV 0.043
-15:      0 svm.noCV.c100 0.000
-16:      0 svm.noCV.c001 0.037
 
