--- a/Round4/file43.Rmd
+++ b/Round4/file43.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Logistic Regression (interactions only, augented space)"
 author: "Jonathan Rosenblatt"
-date: "23/1/2019"
+date: "24/3/2019"
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -9,7 +9,7 @@ editor_options:
 
 ```{r}
 n.permutations <- 3e2
-n.replications <-  1e2
+n.replications <-  1e3
 ```
 
 
@@ -23,12 +23,8 @@ n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
 
-Sigma <- diag(p)
-Sigma.inv <- solve(Sigma)
-b0 <- -1
-beta0 <- rep(0,p)
-B0 <- matrix(1, ncol = p, nrow = p)/sqrt(p)
-effects <- c(0,0.5,2)
+makeLogisticSetup(p, beta00=0, B00=1/p)
+effects <- c(0,5,10)
 ```
 
 ```{r}
@@ -38,8 +34,6 @@ Sigma.augment <- cov(noise.augment) %>% round(0) %>% as("dsCMatrix")
 Sigma.aug.inv <- solve(Sigma.augment)
 rm(noise, noise.augment)
 ```
-
-
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
@@ -53,31 +47,21 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Logistic regression
     noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
-    
-    ## Logistic regression
-    # effect <- effects[[3]]
-    beta <- beta0*effect
-    B <- B0*effect
-    link <- b0 + noise%*%beta + colSums(t(noise) * (B %*% t(noise)))
-    probs <- plogis(link)
 
-    labels <- c(TRUE,FALSE)[rbinom(n,1, probs)+1]
+    # effect <- effects[[3]]
+    probs <- makeLogisticProbs(beta0, B0, effect, noise)
+
+    labels <- makeLogisticLabels(probs,n)
     # table(labels)
     # plot(probs,type='h', col=labels+1)
-    while(sum(labels)<10 || sum(labels)>30){
-      labels <- c(TRUE,FALSE)[rbinom(n,1, probs)+1] # group assignemt labels
-    }
-    
+
+
     ## Compute observed statistic
     noise.augment <- augmentDesign(noise)
     x1 <- noise.augment[labels,]
     x2 <- noise.augment[!labels,]
-    
-    ## Asign observations to folds. Use the simple label structure to balance folds.
     fold.ids <- balanced_folding(labels, n.folds, balance = TRUE)
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
-    
-    # Observables 
     ts <- statisticsAugmented(x1 = x1, 
                     x2 = x2, 
                     Sigma.inv = Sigma.aug.inv, 
@@ -86,11 +70,9 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
                     fold.ids = fold.ids)
     
     
-    # Prepare to permute
+    # Permute
     old.labels <- labels
     old.folds.ids <- fold.ids
-    
-    # Initialize permuted statistics
     permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
     
     for(i in 1:n.permutations){
@@ -121,7 +103,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   }
 } 
 
-pbPost(type = "note", body = "File43", title = the.message)
+pbPost(type = "note", body = "Done", title = the.message)
 save.image(file=paste(file.name,".RData", sep=''))
 ```
 
